// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backstage <Backstage /> CommandLaunchBackstageItem renders correctly 1`] = `
<BackstageItem
  icon={
    <Icon
      iconClass="icon-placeholder"
      iconElement={undefined}
    />
  }
  key=""
  label="tests.label"
  onClick={[Function]}
/>
`;

exports[`Backstage <Backstage /> FrontstageLaunchBackstageItem renders correctly 1`] = `
<BackstageItem
  icon={
    <Icon
      iconClass="icon-placeholder"
      iconElement={undefined}
    />
  }
  isActive={true}
  isDisabled={false}
  key="Test1"
  label="tests.label"
  onClick={[Function]}
/>
`;

exports[`Backstage <Backstage /> SeparatorBackstageItem renders correctly 1`] = `
<BackstageSeparator
  key="NaN"
/>
`;

exports[`Backstage <Backstage /> TaskLaunchBackstageItem renders correctly 1`] = `
<BackstageItem
  icon={
    <Icon
      iconClass="icon-placeholder"
      iconElement={undefined}
    />
  }
  key="ExampleWorkflow:Task1"
  label="tests.label"
  onClick={[Function]}
/>
`;

exports[`Backstage <Backstage /> renders correctly - !isVisible 1`] = `
<Fragment>
  <Backstage
    isOpen={false}
    onClose={[Function]}
    showOverlay={true}
  />
</Fragment>
`;

exports[`Backstage <Backstage /> renders correctly - isVisible 1`] = `
<Fragment>
  <Backstage
    isOpen={true}
    onClose={[Function]}
    showOverlay={true}
  />
</Fragment>
`;

exports[`Backstage <Backstage /> with child items 1`] = `
<Fragment>
  <Backstage
    isOpen={true}
    items={
      Array [
        <CommandLaunchBackstageItem
          commandId="my-command-id"
          execute={[Function]}
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
        />,
        <SeparatorBackstageItem />,
        <FrontstageLaunchBackstageItem
          frontstageId="Test1"
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
        />,
        <SeparatorBackstageItem />,
        <TaskLaunchBackstageItem
          iconClass="icon-placeholder"
          labelKey="UiFramework:tests.label"
          taskId="Task1"
          workflowId="ExampleWorkflow"
        />,
      ]
    }
    onClose={[Function]}
    showOverlay={true}
  />
</Fragment>
`;
